Forgot Password Page Created

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,7 @@
     <ul>
       <li>
         <a (click)="handleSignupAction()">SignUp</a>
+        <a (click)="handleForgotPasswordAction()">Forgot Password</a>
       </li>
     </ul>
   </nav>
