--- a/src/app/material-component/manage-product/manage-product.component.html
+++ b/src/app/material-component/manage-product/manage-product.component.html
@@ -12,7 +12,7 @@
         <mat-label>Filter</mat-label>
         <input matInput (keyup)="applyFilter($event)" #input>
     </mat-form-field>
-</mat-card>,
+</mat-card>
 
 <hr>
 
@@ -57,3 +57,4 @@
         <tr mat-row *matRowDef="let row;columns:displayedColums;"></tr>
 
     </table>
+</div>
